# Smart_Resource_Allocator

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  seed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1c5b0e54729a_update_organization_cascade.py  2e83c318b506_add_task_and_volunteer_models.py  7239b967b933_create_users_table.py  7fb541e05c99_add_people_needed_to_task.py  9c7f2a41d6b0_add_web_mvp_relationships.py  c8a73d17f0b2_add_query_performance_indexes.py  f4a1a9c2d18e_enforce_single_org_per_coordinator.py
app/: main.py
app/api/: router.py
app/api/endpoints/: ingest.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  assignment.py  organization.py  task.py  user.py  volunteer.py
app/schemas/: __init__.py  ingest.py  task.py  volunteer.py
app/services/: capacity.py  extractor.py  matcher.py
app/static/css/: app.css
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/auth/: login.html  register.html
app/templates/coordinator/: applicants.html  dashboard.html  ingest.html  task_form.html
app/templates/partials/: ingest_result.html  matched_tasks_list.html  task_card.html  volunteer_card.html
app/templates/volunteer/: dashboard.html  (+4 more)
app/web/: __init__.py  admin.py  auth.py  coordinator.py  deps.py  forms.py  options.py  rate_limit.py  router.py  security_headers.py  templates.py  volunteer.py
tests/: conftest.py  test_dashboard_search.py  test_health.py  test_ingest.py  test_web.py
